fixed left align for h2 in menu

--- a/css/master.css
+++ b/css/master.css
@@ -53,6 +53,7 @@ h4 {
   font-size: 22px;
   color: #2F243A;
   text-decoration: underline;
+  text-align: left;
   margin-bottom: 0px;
 }
 
